PROJECT(MattesMetricCachingTest)

FIND_PACKAGE(ITK REQUIRED)
IF(ITK_FOUND)
  INCLUDE(${ITK_USE_FILE})
ENDIF(ITK_FOUND)

ADD_EXECUTABLE(MattesMetricCachingTest MattesMetricCachingTest.cxx )

TARGET_LINK_LIBRARIES(MattesMetricCachingTest ITKIO ITKAlgorithms ITKNumerics)

ENABLE_TESTING()

SET(NUMBER_OF_CALLS 1000)

SET( IMAGE_SIZE_X  50 )
SET( IMAGE_SIZE_Y  50 )
SET( IMAGE_SIZE_Z  50 )

SET( IMAGE_SIZE ${IMAGE_SIZE_X} ${IMAGE_SIZE_Y} ${IMAGE_SIZE_Z} )

ADD_TEST( MattesWithCaching    MattesMetricCachingTest  ${IMAGE_SIZE} ${NUMBER_OF_CALLS} 1 )

ADD_TEST( MattesWithoutCaching MattesMetricCachingTest  ${IMAGE_SIZE} ${NUMBER_OF_CALLS} 0 )
