PROJECT(MattesMetricCachingTest)

FIND_PACKAGE(ITK REQUIRED)
IF(ITK_FOUND)
  INCLUDE(${ITK_USE_FILE})
ENDIF(ITK_FOUND)

ENABLE_TESTING()

# SIZE MUST BE LARGER THAN 32x32x16 (B-spline grid size)
SET( SIZE_LIST 32 48 )
#SET( SIZE_LIST 8 16 32 )
#SET( SIZE_LIST 32 50 70 80 90 100 110 )
#SET( SIZE_LIST 256 )
SET(NUMBER_OF_CALLS 1)

SUBDIRS(
  Source
  Testing
  Documents
  )
