PROJECT(MattesMetricCachingTest)

FIND_PACKAGE(ITK REQUIRED)
IF(ITK_FOUND)
  INCLUDE(${ITK_USE_FILE})
ENDIF(ITK_FOUND)

IF(NOT EXECUTABLE_OUTPUT_PATH)
  SET (EXECUTABLE_OUTPUT_PATH ${MattesMetricCachingTest_BINARY_DIR}/bin CACHE INTERNAL "Single output directory for building all executables.")
ENDIF(NOT EXECUTABLE_OUTPUT_PATH)

ENABLE_TESTING()

# SIZE MUST BE LARGER THAN 32x32x16 (B-spline grid size)
SET( SIZE_LIST 32 48 )
#SET( SIZE_LIST 8 16 32 )
#SET( SIZE_LIST 32 50 70 80 90 100 110 )
#SET( SIZE_LIST 256 )
SET(NUMBER_OF_CALLS 1)

SUBDIRS(
  Source
  Testing
  Documents
  )
